# binwatch-firmware

./: Cargo.toml  memory.x  upload.sh
.cargo/: config
src/: display.rs  main.rs  rtc.rs
